--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@ body, html {
 
 body { display: flex; align-items: center; justify-content: center; min-height: 100svh; }
 
+/* AJUSTE PARA AS IMAGENS DA ABELHA */
+.bee-img {
+    width: 90px;
+    height: 90px;
+    object-fit: contain;
+}
+.bee-img-large {
+    width: 130px;
+    height: 130px;
+    object-fit: contain;
+}
+
 /* TELA INICIAL NATALINA */
 #startScreen {
     position: fixed; inset: 0; background: var(--bg-gradient);
@@ -50,7 +62,7 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
 @keyframes fall { to { transform: translateY(110vh) rotate(360deg); } }
 
 .start-bee-wrapper { position: relative; z-index: 2; margin-bottom: 20px; }
-.start-logo { font-size: 100px; animation: floatBee 3s infinite ease-in-out; }
+.start-logo { animation: floatBee 3s infinite ease-in-out; }
 
 .start-title { 
     font-size: clamp(30px, 10vw, 42px); font-weight: 900; color: white; margin: 20px 0; 
@@ -111,14 +123,12 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
     display: flex; 
     justify-content: center; 
     align-items: center;
-    overflow: hidden; 
+    overflow: visible; 
     border-radius: 50%;
 }
 .aura { position: absolute; width: 150px; height: 150px; border-radius: 50%; filter: blur(25px); opacity: 0.3; background: radial-gradient(circle, rgba(255,204,0,0.5), transparent 70%); transition: 0.2s; pointer-events: none; }
 
 .bee-container { position: relative; z-index: 2; animation: floatBee 3s infinite ease-in-out; cursor: pointer; transition: transform 0.05s; }
-.bee { font-size: 75px; }
-.bee-accessory { position: absolute; top: -25px; left: 42%; transform: translateX(-50%); font-size: 38px; display: none; pointer-events: none; z-index: 3; }
 
 @keyframes floatBee { 0%, 100%{transform:translateY(0) rotate(0deg);} 50%{transform:translateY(-12px) rotate(3deg);} }
 .target { height: 65px; width: 65px; border-radius: 20px; border: 3px dashed #ffeb3b; display: flex; align-items: center; justify-content: center; font-size: 28px; opacity: 0.7; }
@@ -126,7 +136,6 @@ body { display: flex; align-items: center; justify-content: center; min-height: 
 #active-boosts { position: absolute; top: 10px; width: 100%; display: flex; justify-content: center; gap: 8px; pointer-events: none; z-index: 5; }
 .active-boost-timer { display: flex; align-items: center; gap: 4px; background: rgba(255,255,255,0.95); padding: 4px 10px; border-radius: 12px; border: 1.5px solid var(--accent); font-size: 11px; font-weight: 900; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 
-/* PAINEL INFERIOR ARREDONDADO EM TODOS OS LADOS */
 .main-panel { flex: 1; display: flex; flex-direction: column; overflow: hidden; background: var(--card); border-radius: 26px; box-shadow: var(--shadow); margin-bottom: 14px; }
 .tabs-header { display: flex; background: #f8f8f8; border-bottom: 1px solid #eee; flex-shrink: 0; }
 .tab-btn { flex: 1; padding: 15px; border: none; background: none; font-weight: 800; color: #999; cursor: pointer; font-size: 13px; }
@@ -185,7 +194,9 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
 <div id="startScreen">
     <div class="snow-container" id="snowContainer"></div>
     <div class="start-bee-wrapper">
-        <div class="start-logo">🐝</div>
+        <div class="start-logo">
+            <img src="NoelBee.png" alt="NoelBee Logo" class="bee-img-large">
+        </div>
     </div>
     <div class="start-title">
         BEE CL<span class="letter-i-wrapper">I<span class="tree-overlay">🎄</span></span>CKER
@@ -196,7 +207,7 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
         <button id="btnChangelog" style="background: #ffffff; color: #1e3799; box-shadow: 0 4px 0 #cbd5e0; font-size: 14px; padding: 12px;" onclick="openChangelog()">O QUE MUDOU?</button>
     </div>
 
-    <div class="version-tag">🎄 CHRISTMAS UPDATE v3.8.0</div>
+    <div class="version-tag">🎄 CHRISTMAS UPDATE v3.8.5</div>
 </div>
 
 <div class="game" id="gameUI">
@@ -205,7 +216,9 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
   <div class="card">
     <div id="saveIndicator" class="save-icon">💾</div>
     <div class="top-btns"><button class="circle-btn" id="btnHelp">❓</button></div>
-    <div style="font-size: 20px; font-weight: 900; margin-top: 5px;">Bee Clicker 🐝</div>
+    <div style="font-size: 20px; font-weight: 900; margin-top: 5px; display: flex; align-items: center; justify-content: center; gap: 10px;">
+        Bee Clicker <img src="NoelBee.png" alt="Bee" style="width: 25px; height: 25px;">
+    </div>
     <div class="stats">🍯 <span id="honey">0</span> | ⚡ <span id="mps">0</span>/s</div>
     <div class="level-container">
       <div class="level-info"><span>Nível <span id="lvlDisplay">1</span></span><span id="xpDisplay">0 / 1.0K</span></div>
@@ -225,9 +238,7 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
       <div class="aura-wrapper">
         <div class="aura" id="aura"></div>
         <div class="bee-container" id="beeContainer">
-            <div class="bee-accessory" id="acc_crown">👑</div>
-            <div class="bee-accessory" id="acc_santa">🧑‍🎄</div>
-            <div class="bee">🐝</div>
+            <img id="mainBeeSprite" src="NoelBee.png" alt="Bee character" class="bee-img">
         </div>
       </div>
       <div class="target" id="rightTarget">🎯</div>
@@ -277,8 +288,8 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
                   <div id="shop_cosmetics" class="sub-shop-pane" style="display:none;">
                       <div style="font-weight:900; margin-bottom:10px;">👔 Guarda-Roupa Real</div>
                       <div class="shop-grid">
-                          <button class="buy-btn-small" id="btn_cos_crown" onclick="handleCosmetic('crown', 50000)"><b>Coroa</b><br>50.0K 🍯</button>
-                          <button class="buy-btn-small" id="btn_cos_santa" onclick="handleCosmetic('santa', 100000)"><b>Gorro Natal</b><br>100K 🍯</button>
+                          <button class="buy-btn-small" id="btn_cos_Bee" onclick="handleCosmetic('Bee')"><b>Abelha Comum</b><br>DESBLOQUEADO</button>
+                          <button class="buy-btn-small" id="btn_cos_NoelBee" onclick="handleCosmetic('NoelBee')"><b>Abelha Noel</b><br>NATAL 2025</button>
                       </div>
                   </div>
               </div>
@@ -308,15 +319,14 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
             <span style="cursor:pointer" onclick="closeModal('changelogModal')">✖</span>
         </div>
         <div class="modal-content-scroll">
-            <div class="changelog-section-title">✨ O QUE CHEGOU (v3.8.0)</div>
-            <div class="changelog-item">🟢 <span><b>Buff de Experiência:</b> PlayerLevel agora contribui com 1.5x na produção automática (antes 0.5x).</span></div>
-            <div class="changelog-item">🟢 <span><b>Fórmula Atualizada:</b> Nova equação de MPS implementada para recompensar veteranos.</span></div>
-            <div class="changelog-item">🟢 <span><b>Auto-Mel Potente:</b> O ganho por nível de jogador triplicou de eficiência.</span></div>
-            <div class="changelog-item">🟢 <span><b>Estabilidade Offline:</b> Sincronia perfeita entre bônus de nível e tempo offline.</span></div>
+            <div class="changelog-section-title">🎨 ARTES DO DUDU (v3.8.5)</div>
+            <div class="changelog-item">🎄 <span><b>Créditos:</b> Todas as abelhas deste update foram desenhadas pelo lendário <b>Dudu</b>!</span></div>
+            <div class="changelog-item">🎄 <span><b>Skin NoelBee:</b> A skin NoelBee agora é o padrão de Natal.</span></div>
+            <div class="changelog-item">🎄 <span><b>Sistema de Skins:</b> Novo menu de cosméticos com troca instantânea de sprites.</span></div>
             
-            <div class="changelog-section-title" style="margin-top: 15px;">🗑️ O QUE FOI AJUSTADO/REMOVIDO</div>
-            <div class="changelog-item">🔴 <span><b>Fórmula Antiga:</b> Removido o multiplicador de 0.5x por nível de player.</span></div>
-            <div class="changelog-item">🔴 <span><b>Registro Estático:</b> Painel agora mostra mudanças de forma dinâmica com botões fixos.</span></div>
+            <div class="changelog-section-title" style="margin-top: 15px;">✨ O QUE CHEGOU (v3.8.0)</div>
+            <div class="changelog-item">🟢 <span><b>Buff de Experiência:</b> PlayerLevel contribui com 1.5x na produção automática.</span></div>
+            <div class="changelog-item">🟢 <span><b>Auto-Mel Potente:</b> Ganho por nível triplicado.</span></div>
         </div>
         <div class="modal-footer">
             <button onclick="closeModal('changelogModal')" style="margin-top: 0;">ENTENDIDO!</button>
@@ -347,22 +357,17 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
         <div class="modal-content-scroll">
             <div class="help-block">
                 <h3>🎯 Coleta Principal</h3>
-                <p>Clique na <b>Abelha central</b> ou nos <b>Alvos 🎯</b> que aparecem. Clicar nos alvos gera bônus de precisão e XP extra!</p>
+                <p>Clique na <b>Abelha central</b> desenhada pelo <b>Dudu</b> ou nos <b>Alvos 🎯</b>.</p>
             </div>
             <div class="help-block">
                 <h3>⚡ Automação e Níveis</h3>
-                <p>A produção automática (MPS) agora escala fortemente com seu <b>Nível de Player</b>. A cada nível alcançado, sua produção base recebe um bônus de 1.5 de mel por segundo!</p>
+                <p>A produção (MPS) escala fortemente com seu <b>Nível de Player</b>.</p>
             </div>
             <div class="help-block">
                 <h3>🚀 Boosts Temporários</h3>
-                <p>Use a loja para multiplicar seu poder temporariamente:</p>
                 <div class="help-item">🌶️ Pimenta: Produção x3</div>
                 <div class="help-item">🥤 Energético: Velocidade Auto x2</div>
                 <div class="help-item">🌼 Flor: Ganho de XP x5</div>
-            </div>
-            <div class="help-block">
-                <h3>💤 Estratégia Offline</h3>
-                <p>Ao desbloquear a Automação, você coleta <b>80% da sua produção total</b> ao retornar, incluindo o bônus do seu PlayerLevel!</p>
             </div>
         </div>
         <div class="modal-footer">
@@ -373,11 +378,11 @@ button:disabled { background:#e0e0e0 !important; color:#aaa !important; box-shad
 
 <script>
 const SAVE_KEY = "BeeRoyal_Balance_V2";
-const VERSION_KEY = "BeeRoyal_LastSeenVersion_380"; 
+const VERSION_KEY = "BeeRoyal_LastSeenVersion_385"; 
 
 let honey = 0, totalHoneyEver = 0, hPerClick = 1, clickCost = 10, level = 1;
 let currentXP = 0, nextLevelXP = 1000, autoUnlocked = false, autoLevel = 1, autoCost = 100;
-let ownedCosmetics = [], equippedCosmetic = null, pendingOfflineHoney = 0;
+let ownedCosmetics = ["Bee", "NoelBee"], equippedCosmetic = "NoelBee", pendingOfflineHoney = 0;
 let activeBoosts = { pepper: 0, energy: 0, flower: 0 }, clickBuffer = [], gameLoaded = false;
 let currentAchFilter = 'all';
 
@@ -435,10 +440,8 @@ function formatTime(t) {
     return Math.floor(m/60) + "h";
 }
 
-// CORREÇÃO: FÓRMULA DE MPS SOLICITADA PELO USUÁRIO (v3.8.0)
 function getMPSBase() {
     if(!autoUnlocked) return 0;
-    // (Auto Lvl * 2) + (Player Lvl * 1.5)
     return (autoLevel * 2) + (level * 1.5);
 }
 
@@ -467,13 +470,19 @@ function updateUI() {
     buildShop();
     renderActiveBoosts();
 
-    ['crown', 'santa'].forEach(id => {
+    // UI DE COSMÉTICOS ATUALIZADA
+    ['Bee', 'NoelBee'].forEach(id => {
         const btn = document.getElementById(`btn_cos_${id}`);
-        const acc = document.getElementById(`acc_${id}`);
         if(!btn) return;
-        if(equippedCosmetic === id) { btn.textContent = "EQUIPADO"; btn.style.background = "var(--xp-bar)"; acc.style.display = "block"; }
-        else if(ownedCosmetics.includes(id)) { btn.textContent = "EQUIPAR"; btn.style.background = "var(--rare)"; acc.style.display = "none"; }
-        else { btn.disabled = (honey < (id==='crown'?50000:100000)); acc.style.display = "none"; }
+        if(equippedCosmetic === id) { 
+            btn.textContent = "EQUIPADO"; 
+            btn.style.background = "var(--xp-bar)"; 
+            document.getElementById("mainBeeSprite").src = `${id}.png`;
+        }
+        else { 
+            btn.textContent = "EQUIPAR"; 
+            btn.style.background = "var(--rare)"; 
+        }
     });
 }
 
@@ -496,7 +505,7 @@ function doClick() {
     honey += g; totalHoneyEver += g;
     addXP(g);
     const bee = document.getElementById("beeContainer");
-    bee.style.transform = "scale(0.9)";
+    bee.style.transform = "scale(0.85)";
     setTimeout(() => bee.style.transform = "scale(1)", 50);
     clickBuffer.push(Date.now());
     spawnFlake('gameSnowContainer');
@@ -525,10 +534,11 @@ function buyBoost(type, ticks, mult, label) {
     }
 }
 
-function handleCosmetic(id, cost) {
-    if (ownedCosmetics.includes(id)) equippedCosmetic = (equippedCosmetic === id) ? null : id;
-    else if (honey >= cost) { honey -= cost; ownedCosmetics.push(id); notify({n: "Estilo Real!"}); }
-    updateUI(); executeSave();
+function handleCosmetic(id) {
+    equippedCosmetic = id; 
+    notify({n: "Skin Trocada!"});
+    updateUI(); 
+    executeSave();
 }
 
 function startAutoProducing() {
@@ -553,10 +563,6 @@ function executeSave(){
     setTimeout(() => indicator.classList.remove("visible"), 1000);
 }
 
-setInterval(() => {
-    if(gameLoaded) executeSave();
-}, 15000);
-
 function load(){
     initAchievements();
     const raw = localStorage.getItem(SAVE_KEY);
@@ -572,7 +578,8 @@ function load(){
             nextLevelXP = d.nextLevelXP || 1000; autoUnlocked = d.autoUnlocked || false;
             autoLevel = d.autoLevel || 1; autoCost = d.autoCost || 100;
             if(d.activeBoosts) activeBoosts = d.activeBoosts;
-            if(d.ownedCosmetics) ownedCosmetics = d.ownedCosmetics;
+            // Garantir que as novas skins estejam desbloqueadas em saves antigos
+            ownedCosmetics = ["Bee", "NoelBee"];
             if(d.equippedCosmetic) equippedCosmetic = d.equippedCosmetic;
             
             if(autoUnlocked && d.timestamp) {
@@ -694,7 +701,7 @@ function enterGame() {
         document.getElementById('startScreen').style.display = 'none';
         document.getElementById('gameUI').style.opacity = '1';
         if(pendingOfflineHoney > 1) {
-            document.getElementById("offlineText").textContent = `As abelhas trabalharam a 80% de eficiência com o novo bônus de Nível Real! Você coletou ${formatNum(pendingOfflineHoney)} de mel.`;
+            document.getElementById("offlineText").textContent = `As abelhas do Dudu trabalharam a 80% de eficiência! Você coletou ${formatNum(pendingOfflineHoney)} de mel.`;
             openModal('offlineModal');
         }
     }, 500);
